--- a/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
@@ -791,12 +791,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quantity       2.711014\n",
+       "item_price    18.811429\n",
+       "revenue       21.394231\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solution 2\n",
-    "\n"
+    "\n",
+    "chipo['revenue'] = chipo['quantity'] * chipo['item_price']\n",
+    "order_grouped = chipo.groupby(by=['order_id']).sum()\n",
+    "order_grouped.mean()\n"
    ]
   },
   {
@@ -804,6 +821,46 @@
    "metadata": {},
    "source": [
     "### Step 17. How many different items are sold?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.item_name.value_counts().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.item_name.nunique()"
    ]
   },
   {
